--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@graphql-yoga/node": "2.11.2",
     "graphql": "16.5.0",
+    "graphql-request": "^6.1.0",
     "mongoose": "6.4.1",
     "next": "12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-showdown": "2.3.1",
+    "sharp": "^0.32.1",
     "zustand": "4.0.0-rc.1"
   },
   "devDependencies": {
